--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
     "date-fns": "^2.28.0",
     "electron-serve": "^1.1.0",
     "electron-store": "^8.1.0",
+    "eslint-import-resolver-typescript": "^3.5.1",
     "next": "^12.2.5",
     "nextron": "^8.2.0",
+    "notistack": "^2.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "notistack": "^2.0.3",
     "yup": "^0.32.11"
   },
   "devDependencies": {
