--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,20 +13,7 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
-    "baseUrl": ".",
-    "paths": {
-      "@components/*": ["renderer/components/*"],
-      "@layouts/*": ["renderer/layouts/*"],
-      "@constants/*": ["renderer/constants/*"],
-      "@hooks/*": ["renderer/hooks/*"],
-      "@public/*": ["renderer/public/*"],
-      "@pages/*": ["renderer/pages/*"],
-      "@assets/*": ["resources/*"],
-      "@schemas/*": ["renderer/schemas/*"],
-      "@styles/*": ["renderer/styles/*"],
-      "@utils/*": ["renderer/utils/*"]
-    }
+    "jsx": "preserve"
   },
   "exclude": ["node_modules", "renderer/next.config.js", "app", "dist"]
 }
