--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,16 +8,18 @@
     "plugin:react/recommended",
     "plugin:@typescript-eslint/recommended",
     "airbnb",
+    "airbnb-typescript",
     "plugin:prettier/recommended",
     "prettier",
-    "plugin:import/typescript"
+    "plugin:import/typescript",
+    "next"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true
     },
-    "ecmaVersion": 12,
+    "ecmaVersion": 2018,
     "sourceType": "module",
     "project": "./renderer/tsconfig.json"
   },
