--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "electron-builder": "^23.3.3",
     "eslint": "^8.23.1",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-next": "12.1.0",
     "eslint-config-prettier": "^8.4.0",
     "eslint-plugin-import": "^2.25.4",
