--- a/package.json
+++ b/package.json
@@ -24,15 +24,18 @@
     "electron-serve": "^1.1.0",
     "electron-store": "^8.1.0",
     "eslint-import-resolver-typescript": "^3.5.1",
+    "lodash": "^4.17.21",
     "next": "^12.2.5",
     "nextron": "^8.2.0",
     "notistack": "^2.0.3",
+    "pg": "^8.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "^16.11.7",
+    "@types/pg": "^8.6.5",
     "@types/react": "^18.0.8",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
