--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "@mui/system": "^5.4.3",
     "@mui/types": "^7.1.2",
     "@mui/x-date-pickers": "^5.0.0-alpha.4",
-    "date-fns": "^2.28.0",
+    "date-fns": "^2.29.3",
     "electron-serve": "^1.1.0",
     "electron-store": "^8.1.0",
     "eslint-import-resolver-typescript": "^3.5.1",
     "lodash": "^4.17.21",
+    "material-react-table": "^1.2.7",
     "next": "^12.2.5",
     "nextron": "^8.2.0",
     "notistack": "^2.0.3",
@@ -37,6 +38,7 @@
     "@types/node": "^16.11.7",
     "@types/pg": "^8.6.5",
     "@types/react": "^18.0.8",
+    "@types/react-table": "^7.7.12",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
     "electron": "^20.1.4",
