--- a/package.json
+++ b/package.json
@@ -20,18 +20,19 @@
     "@mui/system": "^5.4.3",
     "@mui/types": "^7.1.2",
     "@mui/x-date-pickers": "^5.0.0-alpha.4",
+    "@urql/exchange-graphcache": "^5.0.4",
     "date-fns": "^2.29.3",
     "electron-serve": "^1.1.0",
     "electron-store": "^8.1.0",
-    "eslint-import-resolver-typescript": "^3.5.1",
+    "graphql": "^16.6.0",
     "lodash": "^4.17.21",
     "material-react-table": "^1.2.7",
     "next": "^12.2.5",
     "nextron": "^8.2.0",
     "notistack": "^2.0.3",
-    "pg": "^8.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "urql": "^3.0.3",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -48,6 +49,7 @@
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-next": "12.1.0",
     "eslint-config-prettier": "^8.4.0",
+    "eslint-import-resolver-typescript": "^3.5.1",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
