--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/cache": "^11.10.3",
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
+    "@hookform/resolvers": "^2.9.10",
     "@mui/icons-material": "^5.4.2",
     "@mui/lab": "^5.0.0-alpha.105",
     "@mui/material": "^5.4.2",
@@ -34,6 +35,7 @@
     "notistack": "^2.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.38.0",
     "urql": "^3.0.3",
     "yup": "^0.32.11"
   },
